fix: gap

--- a/index.css
+++ b/index.css
@@ -31,7 +31,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: flex-start;
-
+    gap: 30px;
     min-height: 100vh;
     margin: 0;
     padding: 24px;
@@ -40,6 +40,7 @@ body {
 
 @media (max-width: 768px) {
     body {
+        gap: 0px;
         padding: 16px;
         flex-direction: column;
         align-items: center;
